<resources>
    <string name="app_name">Newinked</string>
    <string name="registro">REGISTRO</string>
    <string name="usuario">USUARIO</string>
    <string name="tatuador">TATUADOR</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="registrate">Regístrate</string>
    <string name="registro_de_usuarios">Registro de usuarios</string>
    <string name="edad">Edad</string>
    <string name="ubicaci_n">Ubicación</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="contrasena">Password</string>
    <string name="confirmar_contrasena">Confirmar contraseña</string>
    <string name="tomar_foto">Tomar foto</string>
    <string name="seleccionar_foto">Seleccionar foto de Galería</string>
    <string name="registrarse">Registrarse</string>
    <string name="nombre_completo">Nombre completo</string>
    <string name="registro_de_usuarioss">Registro de usuarios</string>
    <string name="nombre__completo">Nombre Completo</string>
    <string name="fecha_de_nacimiento">Fecha de nacimiento</string>
    <string name="ubicacion">Ubicación</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="confirmar_password">Confirmar contraseña</string>
    <string name="registrarme">Registrarme</string>
    <string name="subir_imagen">SUBIR IMAGEN</string>
    <string name="iniciar_sesi_n">INICIAR SESIÓN</string>
    <string name="registrar">REGISTRATE</string>
    <string name="registro_de_tatuadores">Registro de Tatuadores</string>
    <string name="usuarioo">Usuario</string>
    <string name="passwordd">Contraseña</string>
    <string name="iniciar_sesionn">Iniciar Sesión</string>
    <string name="buscador">BUSCADOR</string>
    <string name="usuario2">Usuario</string>
    <string name="pass">Contraseña</string>
    <string name="inicios">Iniciar Sesión</string>
    <string name="todo">TODO</string>
    <string name="todos">TODO</string>
    <string name="usuario_correo">Usuario</string>
    <string name="profile_image">Imagen de Perfil</string>
    <string name="edit_profile">Editar Perfil</string>
    <string name="user_name_label">Nombre de Usuario</string>
    <string name="gallery_label">Galería</string>
    <string name="user_bio_label">Biografía</string>
    <string name="add_photo">Añadir Foto</string>
    <string name="registrar_cuenta">Registrar cuenta</string>
    <string name="email">Email\n\n</string>
    <string name="todoo">TODO</string>
    <string name="flor1">Flor1</string>
    <string name="acerca_de">Acerca de ...</string>
    <string name="acercade">ACERCA DE ...</string>
    <string name="textview">ACERCA DE ...</string>
    <string name="inkfinder">¡InkFinder es una aplicación revolucionaria que simplifica la búsqueda de tatuadores en todo el país. Encuentra artistas especializados en diferentes estilos de tatuaje y establece comunicación directa con ellos. Explora sus trabajos y sumérgete en el mundo del arte corporal. Una plataforma intuitiva que te conecta con tatuadores profesionales. Descubre tu próximo tatuaje y conecta con los mejores artistas en InkFinder.</string>
    <string name="atras">ATRÁS</string>
    <string name="inkfinderr">INKFINDER</string>
    <string name="acercadee">Acerca de...</string>
    <string name="iniciar">INICIAR SESIÓN</string>
    <string name="todoss">TODO</string>
    <string name="todosss">TODO</string>
    <string name="forgetpassword">¿Olvidaste tu contraseña?</string>
    <string name="enviar_solicitud">Enviar solicitud</string>
    <string name="correo">Correo electrónico</string>
    <string name="recuperar">Recuperar contraseña</string>
    <string name="enviar_mensaje_a">Enviar mensaje a:</string>
    <string name="escribe_tu_mensaje">Escribe tu mensaje...</string>
    <string name="enviar">Enviar</string>
    <string name="nombre">Nombre</string>
    <string name="emaill">Email</string>
    <string name="ubi">Ubicación</string>
    <string name="todossswsws">TODO</string>
    <string name="enviar_mensaje">ENVIAR MENSAJE</string>
    <string name="subir_fotos">Subir fotos</string>
    <string name="editar_foto_de_perfil">Editar Foto de Perfil</string>
    <string name="user_street">Dirección</string>
    <string name="editar_foto">EDITAR FOTO</string>
    <string name="direccion">Dirección</string>
    <string name="emailll">Email</string>
    <string name="ubicacionnn">Ubicación</string>
    <string name="nom">Nombre</string>
    <string name="e" />
    <string name="explora">Explora...</string>
    <string name="click_en_la_foto_para_ver_el_perfil_del_tatuador">Click en la foto para ver el perfil del tatuador</string>
    <string name="lamentamos_tu_decisi_n_esperamos_volver_a_verte_pronto">Lamentamos tu decisión esperamos volver a verte pronto</string>
    <string name="introduce_tu_contrase_a">Introduce tu contraseña</string>
    <string name="baja">BAJA</string>
    <string name="bajja">BAJA DE LA CUENTA</string>
    <string-array name="categoriaopciones">
        <item>Todos</item>
        <item>Lineal</item>
        <item>Floral</item>
        <item>Oriental</item>
    </string-array>


</resources>