<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aclonica"
            android:text="@string/registro_de_tatuadores"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/nombreCompletoEditText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:fontFamily="@font/aclonica"
            android:hint="@string/nombre__completo"
            android:inputType="text"
            android:padding="10dp" />

        <EditText
            android:id="@+id/ubicacionEditText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:fontFamily="@font/aclonica"
            android:hint="@string/ubicacion"
            android:inputType="text"
            android:padding="10dp" />

        <EditText
            android:id="@+id/correoElectronicoEditText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:fontFamily="@font/aclonica"
            android:hint="@string/correo_electronico"
            android:inputType="text"
            android:padding="10dp" />

        <EditText
            android:id="@+id/contrasenaEditText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:fontFamily="@font/aclonica"
            android:hint="@string/password"
            android:inputType="text"
            android:padding="10dp" />

        <EditText
            android:id="@+id/confirmarContrasenaEditText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:fontFamily="@font/aclonica"
            android:hint="@string/confirmar_password"
            android:inputType="text"
            android:padding="10dp" />



        <Button
            android:id="@+id/registrarButtonTatuador"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:background="@color/black"
            android:fontFamily="@font/aclonica"
            android:text="@string/registrarme"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

    </LinearLayout>

</ScrollView>