<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registro_de_usuarioss"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/nombreCompletoEditText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:hint="@string/nombre__completo"
            android:inputType="text"
            android:padding="10dp"
            android:autofillHints="" />

        <TextView
            android:id="@+id/fechaNacimientoTextView"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:hint="@string/fecha_de_nacimiento"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/ubicacionEditText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:hint="@string/ubicacion"
            android:inputType="text"
            android:padding="10dp"
            android:autofillHints="" />

        <EditText
            android:id="@+id/correoElectronicoEditText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:hint="@string/correo_electronico"
            android:inputType="text"
            android:padding="10dp"
            android:autofillHints="" />

        <EditText
            android:id="@+id/contrasenaEditText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:hint="@string/password"
            android:inputType="text"
            android:padding="10dp"
            android:autofillHints="" />

        <EditText
            android:id="@+id/confirmarContrasenaEditText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:hint="@string/confirmar_password"
            android:inputType="text"
            android:padding="10dp"
            android:autofillHints="" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="190dp">


            <ImageView
                android:id="@+id/fotoPerfilImageView"
                android:layout_width="120dp"
                android:layout_height="98dp"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.06"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                android:importantForAccessibility="no"/>

            <ProgressBar
                android:id="@+id/fotoPerfilProgressBar"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="-36dp"
                android:layout_marginEnd="-2dp"
                android:layout_marginBottom="36dp"
                android:indeterminate="true"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/fotoPerfilImageView"
                app:layout_constraintEnd_toEndOf="@+id/fotoPerfilImageView"
                app:layout_constraintHorizontal_bias="0.291"
                app:layout_constraintLeft_toLeftOf="@+id/fotoPerfilImageView"
                app:layout_constraintRight_toRightOf="@+id/fotoPerfilImageView"
                app:layout_constraintStart_toStartOf="@+id/fotoPerfilImageView"
                app:layout_constraintTop_toTopOf="@+id/fotoPerfilImageView"
                app:layout_constraintVertical_bias="1.0" />

            <Button
                android:id="@+id/subirImagenButton"
                android:layout_width="120dp"
                android:layout_height="55dp"
                android:layout_marginTop="4dp"
                android:background="@color/black"
                android:text="@string/subir_imagen"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.061"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fotoPerfilImageView"
                app:layout_constraintVertical_bias="0.157" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/registrarButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:background="@color/black"
            android:text="@string/registrarme"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

    </LinearLayout>

</ScrollView>