<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="16dp">


    <ImageView
        android:id="@+id/user_profile_image"
        android:layout_width="75dp"
        android:layout_height="97dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="320dp"
        android:contentDescription="@string/profile_image" />

    <EditText
        android:id="@+id/user_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="112dp"
        android:layout_marginTop="36dp" />

    <EditText
        android:id="@+id/user_bio_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="122dp"
        android:layout_marginTop="117dp"
        android:text="@string/user_bio_label" />

    <TextView
        android:id="@+id/bio_nuevo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="184dp"
        android:text="TextView" />

    <LinearLayout
        android:id="@+id/gallery_layout"
        android:layout_width="369dp"
        android:layout_height="496dp"
        android:layout_marginTop="186dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/gallery_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gallery_label" />

        <GridView
            android:id="@+id/gallery_gridview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:numColumns="3" />

        <Button
            android:id="@+id/add_photo_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_photo" />

        <Spinner
            android:id="@+id/tattoo_style_spinner"
            android:layout_width="142dp"
            android:layout_height="31dp"
            android:layout_marginTop="8dp" />

    </LinearLayout>

    <Button
        android:id="@+id/edit_profile_button"
        android:layout_width="116dp"
        android:layout_height="46dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="241dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="38dp"
        android:text="@string/edit_profile" />

</RelativeLayout>