<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_google_signin_btn_text_light_pressed"
    android:padding="24dp"
    tools:context=".LoginTatuador">

    <ImageView
        android:id="@+id/imageViewTatuador"
        android:layout_width="211dp"
        android:layout_height="208dp"
        android:background="@drawable/flor5"
        android:contentDescription="@string/todos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/linearLayoutEmail"
        android:layout_width="307dp"
        android:layout_height="108dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.372">

        <TextView
            android:id="@+id/emailLabel"
            android:layout_width="75dp"
            android:layout_height="33dp"
            android:fontFamily="@font/roboto"
            android:text="@string/email"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/usuarioEditText"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@drawable/edittext_background"
            android:fontFamily="@font/dm_sans_medium"
            android:hint="@string/usuario_correo"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="16dp"
            android:textColor="@android:color/white"
            android:textColorHint="@color/button_default_stroke_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailLabel" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutPassword"
        android:layout_width="308dp"
        android:layout_height="95dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/loginButtonUsuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutEmail"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/passwordLabel"
            android:layout_width="89dp"
            android:layout_height="31dp"
            android:fontFamily="@font/roboto"
            android:text="@string/password"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/contrasenaEditText"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@drawable/edittext_background"
            android:fontFamily="@font/dm_sans_medium"
            android:hint="@string/contrasena"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="16dp"
            android:textColor="@android:color/white"
            android:textColorHint="@color/button_default_stroke_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordLabel" />
    </LinearLayout>

    <Button
        android:id="@+id/loginButtonUsuario"
        android:layout_width="290dp"
        android:layout_height="70dp"
        android:backgroundTint="#FF1B9C"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/iniciar_sesion"
        android:textColor="@color/button_default_color"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.355"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.724" />

    <TextView
        android:id="@+id/registroTextView"
        android:layout_width="199dp"
        android:layout_height="51dp"
        android:fontFamily="@font/roboto"
        android:text="@string/forgetpassword"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.924"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButtonUsuario"
        app:layout_constraintVertical_bias="0.056" />

</androidx.constraintlayout.widget.ConstraintLayout>
